// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Animated > renders correctly 1`] = `"<div data-v-app=\\"\\"><div style=\\"padding: 50px; display: flex; justify-content: center;\\"><a data-state=\\"closed\\" href=\\"/\\" class=\\"hover-card-trigger\\"> trigger </a><!----></div></div>"`;

exports[`Animated > should be able to close 1`] = `"<div data-v-app=\\"\\"></div><div data-v-app=\\"\\"><div style=\\"padding: 50px; display: flex; justify-content: center;\\"><a data-state=\\"closed\\" href=\\"/\\" class=\\"hover-card-trigger\\"> trigger </a><!----></div></div>"`;

exports[`AsyncUpdate > renders correctly 1`] = `
"<div style=\\"padding: 50px; display: flex; justify-content: center;\\"><a data-state=\\"closed\\" href=\\"/\\" class=\\"hover-card-trigger\\"> trigger </a>
  <!---->
</div>"
`;

exports[`AsyncUpdate > should be able to close 1`] = `
"<div style=\\"padding: 50px; display: flex; justify-content: center;\\"><a data-state=\\"closed\\" href=\\"/\\" class=\\"hover-card-trigger\\"> trigger </a>
  <!---->
</div>"
`;

exports[`ContainTextSelection > renders correctly 1`] = `
"<div style=\\"padding: 50px; display: flex; justify-content: center; flex-direction: column; align-items: center;\\">
  <div style=\\"display: flex; gap: 30px;\\"><a data-state=\\"closed\\" href=\\"/\\" class=\\"hover-card-trigger\\"> single </a>
    <!----><a data-state=\\"closed\\" href=\\"/\\" class=\\"hover-card-trigger\\"> nested </a>
    <!---->
  </div>
  <div style=\\"max-width: 800px;\\">
    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer feugiat mattis malesuada. Fusce elementum vulputate aliquet. Integer fringilla porta eros. Ut ultricies mattis nisi. Sed et tempor massa. Sed non arcu ut velit scelerisque bibendum tempor sed mi. In non consequat sapien. Donec sollicitudin eget tellus ut venenatis. Donec posuere sem ante, nec iaculis arcu varius sit amet. Praesent non tortor quam. Curabitur dapibus justo a commodo ornare. </p>
    <p> Suspendisse eleifend consequat iaculis. Nunc bibendum velit felis, nec vulputate purus egestas quis. Integer mauris dui, pulvinar non metus id, tristique dignissim elit. Vivamus massa tellus, porttitor id lorem non, molestie aliquam dolor. Pellentesque erat quam, pellentesque non metus id, tempus sagittis massa. </p>
    <p> Sed at elementum sem, non venenatis leo. Ut vulputate consectetur finibus. Sed nunc lectus, accumsan in nisl et, vehicula pretium nisi. Vivamus vestibulum ante quis urna consequat, ultrices condimentum sem commodo. Pellentesque eget orci laoreet, feugiat purus sed, maximus nisi. Suspendisse commodo venenatis facilisis. </p>
  </div>
</div>"
`;

exports[`ContainTextSelection > should be able to close 1`] = `
"<div style=\\"padding: 50px; display: flex; justify-content: center; flex-direction: column; align-items: center;\\">
  <div style=\\"display: flex; gap: 30px;\\"><a data-state=\\"closed\\" href=\\"/\\" class=\\"hover-card-trigger\\"> single </a>
    <!----><a data-state=\\"closed\\" href=\\"/\\" class=\\"hover-card-trigger\\"> nested </a>
    <!---->
  </div>
  <div style=\\"max-width: 800px;\\">
    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer feugiat mattis malesuada. Fusce elementum vulputate aliquet. Integer fringilla porta eros. Ut ultricies mattis nisi. Sed et tempor massa. Sed non arcu ut velit scelerisque bibendum tempor sed mi. In non consequat sapien. Donec sollicitudin eget tellus ut venenatis. Donec posuere sem ante, nec iaculis arcu varius sit amet. Praesent non tortor quam. Curabitur dapibus justo a commodo ornare. </p>
    <p> Suspendisse eleifend consequat iaculis. Nunc bibendum velit felis, nec vulputate purus egestas quis. Integer mauris dui, pulvinar non metus id, tristique dignissim elit. Vivamus massa tellus, porttitor id lorem non, molestie aliquam dolor. Pellentesque erat quam, pellentesque non metus id, tempus sagittis massa. </p>
    <p> Sed at elementum sem, non venenatis leo. Ut vulputate consectetur finibus. Sed nunc lectus, accumsan in nisl et, vehicula pretium nisi. Vivamus vestibulum ante quis urna consequat, ultrices condimentum sem commodo. Pellentesque eget orci laoreet, feugiat purus sed, maximus nisi. Suspendisse commodo venenatis facilisis. </p>
  </div>
</div>"
`;

exports[`Controlled > renders correctly 1`] = `
"<button> Toggle </button>
<div style=\\"padding: 50px; display: flex; justify-content: center;\\"><a data-state=\\"closed\\" href=\\"/\\" class=\\"hover-card-trigger\\"> trigger </a>
  <!---->
</div>"
`;

exports[`Controlled > should be able to close 1`] = `
"<button> Toggle </button>
<div style=\\"padding: 50px; display: flex; justify-content: center;\\"><a data-state=\\"closed\\" href=\\"/\\" class=\\"hover-card-trigger\\"> trigger </a>
  <!---->
</div>"
`;

exports[`ForcedMount > renders correctly 1`] = `
"<div style=\\"padding: 50px; display: flex; justify-content: center;\\"><a data-state=\\"closed\\" href=\\"/\\" class=\\"hover-card-trigger\\"> triggers </a>
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`ForcedMount > should be able to close 1`] = `
"<div style=\\"padding: 50px; display: flex; justify-content: center;\\"><a data-state=\\"closed\\" href=\\"/\\" class=\\"hover-card-trigger\\"> triggers </a>
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`NonPortal > renders correctly 1`] = `
"<div><button>button</button><a data-state=\\"closed\\" href=\\"/\\" class=\\"hover-card-trigger\\"> trigger </a>
  <!----><button>button</button>
</div>"
`;

exports[`NonPortal > should be able to close 1`] = `
"<div><button>button</button><a data-state=\\"closed\\" href=\\"/\\" class=\\"hover-card-trigger\\"> trigger </a>
  <!----><button>button</button>
</div>"
`;
